2010-05-10  Adam Fedor  <fedor@gnu.org>

	* Clarify unstable release documentation

2010-05-09  Adam Fedor  <fedor@gnu.org>

	* Version 0.19.0 Unstable Release

2010-05-09  Adam Fedor  <fedor@gnu.org>

	* Version 0.18.0

2010-05-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTheme.m: ([-deactivate]) unload current theme images before
	restoring previous theme images to avoid conflict with image names.
	* Source/NSImage.m: Add some comments.

2010-05-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (-dealloc): Use DESTROY instead of RELEASE.

2010-05-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSWindowDecorationView.m (-layout): Fix a regression
	where a window's content view was improperly resized when
	toggleToolbarShown: makes its toolbar visible again.

2010-05-02 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSSavePanel.h,
	* Source/NSSavePanel.m: Add method directoryURL. Fixes bug #29735.

2010-05-02 Fred Kiefer <FredKiefer@gmx.de>

	* TextConverters/RTF/RTFProducer.m (-_stringWithRTFCharacters:):
	Remove extra space after \'xx characters accidentially introduced
	with last change.

2010-05-01 Fred Kiefer <FredKiefer@gmx.de>

	* TextConverters/RTF/RTFProducer.m
	(-_runStringForString:attributes:): Only add a delimiter when needed.
	* TextConverters/RTF/RTFProducer.m (-_stringWithRTFCharacters:):
	Only add the \uc0 flag when needed. Use \'AC as attachment character.

2010-05-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* TextConverters/RTF/rtfGrammer.y: Ignore the string parameter of
	a \NeXTGraphic command like OS X does. Fixes bug #29633.
	* TextConverters/RTF/rtfGrammer.tab.c: Regenerated.

2010-04-28  Adam Fedor  <fedor@gnu.org>

	* configure, configure.ac, Headers/Additions/GNUstepGUI/config.h.in,
	Source/NSSliderCell.m: Check for atan2f function (not present on
	old Solaris systems for instance).

2010-04-24 Doug Simons <doug.simons@testplant.com>

	* Source/NSOutlineView.m:
	Fix occasional exception while dragging.
